2006-04-07  David Hampton  <hampton@employees.org>

	* src/backend/file/io-gncxml-v2.c: The cvs version of libxml2
	refuses to write attribute tags that don't have valid namespaces.
	Since gnucash writes the root node of the XML data file by hand,
	there's no node with namespaces that can be passed in to the code
	that generates the gnc:count-data tags.  These tags must be
	generated by hand as well.

	* src/backend/file/gnc-commodity-xml-v2.c: When writing a currency
	to the data file, write the full commodity data block for backward
	compatibility with 1.8, instead of just writing the quote source
	information.

2006-04-05  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/gnc-window.[ch]:
	* src/gnome/gnc-plugin-basic-commands.c: Make the entire UI (menus
	and toolbar) insensitive when the progress bar is showing.
	Replaces the code to make the Save/Save As menus insensitive while
	saving.  Should prevent a whole class of bugs caused by gtk
	commands sneaking in and causing non-recursive code to be entered
	recursively.

2006-04-05  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 1.9.4

2006-04-03  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.[ch]:
	* src/gnome/gnc-plugin-basic-commands.c: Serialize access to the
	"Save" and "Save As" commands.  Fixes 148905.

	* src/backend/file/sixtp-dom-generators.c:
	* src/backend/file/gnc-commodity-xml-v2.c:
	* src/gnome-utils/dialog-commodity.c:
	* src/gnome/dialog-commodities.c:
	* src/engine/gnc-commodity.[ch]: Use the name "Currency"
	internally instead of ISO4217.  Make it possible to edit the "get
	quotes" flag on currencies.

2006-04-02  David Hampton  <hampton@employees.org>

	* src/register/ledger-core/split-register-model.c: Change the
	access key on the "Change Split" button.  Fixes 336836.

	* src/gnome-utils/gnc-main-window.c: Change the access key on the